# SynXpo

./: .gitignore  CMakeLists.txt  README.md  synxpo.proto  test-config.json  test2.json
docs/: SPECIFICATION.md
docs/resources/uml/: conflict-blocked.puml  conflict-denied.puml  file-download.puml  file-upload.puml  partial-deny.puml  subscription.puml  timeout-upload.puml
include/synxpo/client/: config.h  file_watcher.h  grpc_client.h  logger.h  synchronizer.h
include/synxpo/common/: file_storage.h  in_memory_file_storage.h  sqlite_file_storage.h
include/synxpo/server/: service.h  storage.h  subscriptions.h  uuid.h
src/client/: CMakeLists.txt  client_main.cpp  config.cpp  file_watcher.cpp  file_watcher_fswatch.cpp  file_watcher_linux.cpp  grpc_client.cpp  main.cpp
src/client/file_watcher/: file_watcher.cpp  file_watcher_fswatch.cpp  file_watcher_linux.cpp  file_watcher_polling.cpp
src/client/synchronizer/: synchronizer.cpp  synchronizer_download.cpp  synchronizer_handlers.cpp  synchronizer_init.cpp  synchronizer_upload.cpp
src/common/: CMakeLists.txt  in_memory_file_storage.cpp  sqlite_file_storage.cpp
src/proto/: CMakeLists.txt  synxpo.proto
src/server/: CMakeLists.txt  main.cpp  server_main.cpp  service.cpp  storage.cpp  subscriptions.cpp  uuid.cpp
synxpo_storage/: metadata.db-shm  metadata.db-wal
synxpo_storage/04b7947e-7f3c-4024-a59b-eb84e2601408/: 3a861a82-6f16-4d9a-b163-3ad4d4e1b979
synxpo_storage/242fb93c-6b29-4716-b8a7-085c69cdc6e5/: 3eb6d4c5-324d-43d2-899a-9fa872d1c87e
synxpo_storage/5cc3d595-1300-4639-a719-ca723b3bd14c/: 0402f8be-e588-464a-996a-9b4d7b00f209  079b7804-b9ca-49bf-8df5-7c4adaabeff3  20ba5653-da30-4ede-883e-5f546f0bd507  269305c9-68db-44d1-b155-7adc80a03b85  26aa55da-50ae-476f-9a26-5fd6ad05017d  27592536-89f0-4324-bccc-3e977a7834f9  34e6719d-9558-4608-a310-2bf82d844722  35f5c23a-ba58-472e-95ae-be895dc45585  3b4dc37a-6b8e-4fc9-aeb2-909e5584b70e  41d74983-f62f-4d7d-bc35-7ca490270175  437748c9-8e8c-452e-9179-e62bce85a097  6461693f-d5b4-48ed-8873-85981fe41863  6e7561f6-f3f9-476b-a2e9-b45f13b1333a  6f581b39-700a-43dc-b1f9-9982450fa4f4  72d25060-ad56-4050-9908-44a33161bfcf  76b26965-527f-4213-b047-cb14ccfd9bfa  78c837c6-7e9f-40c5-a27d-ea3bb0b0d02d  8246a7b6-1474-40c0-8a2c-e1f53b76469f  882f1fa5-f261-4b74-ad8c-47447bd75f88  885e4b8d-6d92-4255-9ba4-6a3b799e0bbb  888ec72d-10a7-4f28-b032-de31ee426c69  89c15e14-2c7a-4743-abaa-1745e57c411d  9698494b-3e41-45ee-8926-2c76e8aeb3a0  a014cf98-2430-4395-8097-1f62619dc27d  a44ac388-dc55-4dc3-805e-1bc231067578  abcfe6d5-5fb6-45d2-862a-b91f52178253  ae4fc762-53e4-4a94-b13e-2e90a5c20ca3  aee99fc2-3ca4-4067-afc3-3faf5a4e6188  b18563db-db7b-45a7-9dcb-1bb00d6a95db  b7dd53f3-541b-4a94-984c-b8ec04c5b4ac  c241588f-9196-4ecc-9a42-0b0a8a79b7eb  c3b84dfd-bcc6-4709-8ece-bfb7981c8aae  c9bb6002-37e7-4fee-bda7-fcae90d8d222  d577ff39-68ef-402b-b767-e1535a9fb3d3  d9490590-3420-4e84-b2d1-49bd4c0adb7e  d95561db-9369-4fb7-bd8c-ef6bbce0f843  dbfdde48-d3c8-4ab6-813b-cbbf2533469e  e5c71cde-aaef-42c0-809b-3ed5ecf140ec  ec7496fd-3417-4525-8ad4-c2af141d069b  f255932b-7bda-404d-9080-907c4d7de49d  (+1 more)
test/: CMakeLists.txt  sqlite_file_storage_test.cpp
testdir/.synxpo/: client_metadata.db  client_metadata.db-shm
testdir/.synxpo1/: client_metadata.db  client_metadata.db-shm
tests/: CMakeLists.txt  test_client.cpp  test_integration.cpp  test_protobuf.cpp  test_server.cpp
~/.config/synxpo/: config.json
~/.synxpo/: config.json
